# local-hardware-development

./: .gitignore  AGENTS.md  CMakeLists.txt  NEW_CHAT_PROMPT.md  README.md
.agents/: README.md
.agents/skills/ai-hardware-benchmark-reporting/: SKILL.md
.agents/skills/ai-hardware-project-onboarding/: SKILL.md
.agents/skills/ai-hardware-result-review/: SKILL.md
.agents/skills/ai-hardware-task-implementation/: SKILL.md
.agents/skills/ai-hardware-task-intake/: SKILL.md
.github/ISSUE_TEMPLATE/: codex-task.md
benchmarks/: bench_matmul.cpp  bench_memory_access.cpp
docs/: cpu-memory-access.md  phase1.md
include/aihw/: matmul.hpp
src/: matmul.cpp
tests/: test_matmul.cpp
